plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.bk'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security' // Bcrypt를 위해 추가
	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT 생성 / 검증
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // JSON 처리
	// Google API Client for OAuth verification
	implementation 'com.google.api-client:google-api-client:2.2.0'
	// Firebase Admin SDK
	implementation 'com.google.firebase:firebase-admin:9.2.0'
	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// DB
	//runtimeOnly 'com.h2database:h2'
	//runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	//runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	// thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
//	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	// devtools
	//implementation 'org.springframework.boot:spring-boot-devtools'
	// QeuryDSL
//	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
//	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
//	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	// ModelMapper
	//implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.0'


	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	//testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
